--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
-
+ul {
+    list-style-type: none;
+    text-decoration: none;
+}
+body {
+    background-image: url(./images/bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top left;
+    background-attachment: fixed;
+}
