--- a/src/components/PlayersPage/PlayersList/PlayersList.module.css
+++ b/src/components/PlayersPage/PlayersList/PlayersList.module.css
@@ -6,28 +6,22 @@
     padding: 15px;
     cursor: pointer;
     transition: 0.3s transform;
-    /* img {
-        width: 200px;
-        height: 200px;
-        object-fit: cover;
-        transform: translate(-15px, -15px);
-    } */
-    /* &_selected {
-        box-shadow: 0 5px 20px red;
-        transform: translateY(-8px);
-    } */
+}
+.player:hover {
+    box-shadow: 0 5px 20px red;
+    transform: translateY(-8px);
 }
 .players__container {
     display: grid;
     grid-template-columns: repeat(5, 230px);
     column-gap: 70px;
     row-gap: 30px;
-    
 }
-/* .player__info,
-.player__team {
-    list-style-type: none;
-} */
+.team__img {
+    display: block;
+    object-fit: cover;
+    margin: 0 auto;
+}
 .player__info__name {
     font-weight: bold;
     font-size: 22px;
@@ -35,14 +29,3 @@
     text-transform: uppercase;
     color: #fff;
 }
-/* &__content {
-        margin-top: 50px;
-        display: grid;
-        grid-template-columns: 650px 425px;
-        column-gap: 25px;
-        align-items: start;
-    }
-
-    &__name {
-        
-    } */
