--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 ul {
     list-style-type: none;
     text-decoration: none;
+    padding: 0;
 }
 body {
     background-image: url(./images/bg.jpg);
