--- a/src/pages/FavouritesPage/FavouritesPage.module.css
+++ b/src/pages/FavouritesPage/FavouritesPage.module.css
@@ -3,13 +3,11 @@
     background-color: grey;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
     padding: 15px;
-    cursor: pointer;
     transition: 0.3s transform;
     width: 190px;
-    margin: var(--spacing-medium);
     border-radius: 5px;
 }
-.player a {
+.player p {
     text-decoration: none;
     color: black;
     text-align: center;
@@ -23,13 +21,12 @@
     grid-template-columns: repeat(5, 230px);
     column-gap: 70px;
     row-gap: 30px;
-    padding: 0 100px;
 }
 .team__img {
     display: block;
     object-fit: cover;
     margin: 0 auto;
-} 
+}
 .player__info__name {
     font-weight: bold;
     font-size: 22px;
