--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,5 @@ body {
     background-repeat: no-repeat;
     background-position: top left;
     background-attachment: fixed;
+    padding: 0 5%;
 }
