--- a/src/components/MainPage/SearchPageList/SearchPageList.module.css
+++ b/src/components/MainPage/SearchPageList/SearchPageList.module.css
@@ -24,5 +24,9 @@
     column-gap: 70px;
     row-gap: 30px;
     margin-top: 50px;
-    /* padding: 0 100px; */
+}
+.searched__team__name{
+    font-size: 24px;
+    margin-bottom: 0;
+    color: white;
 }
