--- a/src/components/PersonPage/PersonLogo/PersonLogo.module.css
+++ b/src/components/PersonPage/PersonLogo/PersonLogo.module.css
@@ -13,7 +13,8 @@
     object-position: center center;
 }
 .player__favourite {
-    margin-left: -35px;
+    margin-left: -17px;
+    margin-top: -20px;
     width: 35px;
     height: 35px;
     object-fit: cover;
