--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,7 +3,6 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 0;
-    /* padding: 0 100px; */ 
 }
 .navigation__right {
     display: flex;
@@ -15,4 +14,7 @@
 .navigation__right__favs,
 .navigation__right__history {
     padding-right: 50px;
+}
+.navigation__login {
+    color: white;
 }
